src/containers/sidebar/style.scss
.sidebar-outer {
    flex-basis: $sidebar-width;
    flex-grow: 0;
    flex-shrink: 0;
    z-index: 102;
    overflow: hidden;
   
    &.hidden {
        flex-basis: $sidebar-width-hidden;
        max-width: $sidebar-width-hidden;

        .inner {
            .sidebar-body {
            }
        }
    }

    &:not(.display-over) {
        border-right: 2px solid $color-light;
        
        &.hidden {
            .inner {
            }

            .sidebar-top-outer {
                .button-sidebar-display-toggle {
                    display: none;
                }
            }

            .sidebar-body {
                opacity: 0;
            }
        }
    }

    &.display-over {
        flex-basis: $sidebar-width-hidden;
        flex-grow: 0;
        flex-shrink: 0;
        width: $sidebar-width-hidden;
        overflow: visible;
        
        .inner {
            box-shadow: 3px 0 9px $color-shadow-3;
            transition: left 0.5s ease;
            left: 0;
        }
    
        .sidebar-top-outer {
            .button-sidebar-display-toggle {
                .bars::after {
                    right: initial;
                    left: -16px;
                    border-left-color: transparent;
                    border-right-color: $color-white;
                }
            }
        }

        &.hidden {
            .inner {
                left: -($sidebar-width - $sidebar-width-hidden) - 4px;
            }
        }
    }

    .inner {
        display: flex;
        width: $sidebar-width;
        flex-flow: column;
        position: relative;
        height: 100%;
        z-index: 101;
        background-color: $bg-sidebar;
    }

    .sidebar-top-outer {
        display: flex;
        padding: 0 1em;
        align-items: center;
        justify-content: space-between;
        flex-basis: $sidebar-top-height;
        flex-grow: 0;
        flex-shrink: 0;

        background-color: $color-primary;

        .button-sidebar-toggle {
            display: block;
            width: 28px;
            height: 24px;
            position: relative;
            cursor: pointer;

            .bars {
                position: absolute;
                left: 0;
                top: 10px;

                &, &::before, &::after {
                    width: 100%;
                    height: 4px;
                    background-color: $color-white;
                    border-radius: 2px;
                }
                &::before, &::after {
                    display: block;
                    content: '';
                    position: absolute;
                    left: 0;
                }
                &::before {
                    top: -8px;
                }
                &::after {
                    bottom: -8px;
                }
            }

            &:active {
                .bars {
                    &, &::before, &::after {
                        background-color: $color-ultra-light;
                    }
                }
            }
        }

        .button-sidebar-display-toggle {
            display: flex;
            align-items: center;
            cursor: pointer;
            width: 24px;
            height: 24px;
            
            .bars {
                width: 18px;
                height: 4px;
                position: relative;
                background-color: $color-white;
                &:after {
                    display: block;
                    content: '';
                    width: 0;
                    height: 0;
                    position: absolute;
                    right: -16px;
                    top: -6px;
                    border: 8px solid transparent;
                    border-left-color: $color-white;
                }
            }
        }
    }
    
    .sidebar-body {
        position: relative;
        flex-grow: 1;
        transition: opacity 0.3s ease;
    }

    .sidebar-title {
        margin: 0.5em 1em;
        padding: 0 0 0.3em 0;
        border-bottom: 1px solid $color-very-light;
        white-space: nowrap;
    }
}

